2007-07-29  Adam Treat  <treat@kde.org>

        Reviewed by Alexey Proskuryakov.

        WebCore::Widget::setParent should be virtual.
        It is reimplemented in ScrollViewQt for instance.

        * platform/Widget.h:

2007-07-29  Alp Toker  <alp.toker@collabora.co.uk>

        Reviewed by bdash.

        http://bugs.webkit.org/show_bug.cgi?id=14711 (revisited)
        RenderThemeGdk's buttons are state-agnostic (pressed, hovered)

        Generalize shadow state into a function.
        use a GtkHBox to work around a theme bug (thanks to Nigel Tao).

        * platform/gdk/RenderThemeGdk.cpp:
        (WebCore::RenderThemeGdk::determineShadow):
        (WebCore::RenderThemeGdk::paintCheckbox):
        (WebCore::RenderThemeGdk::paintRadio):
        (WebCore::RenderThemeGdk::paintButton):
        (WebCore::RenderThemeGdk::gtkWindowContainer):
        * platform/gdk/RenderThemeGdk.h:

2007-07-27  Adele Peterson  <adele@apple.com>

        Reviewed by Darin. 

        Temporary fix for Windows to prevent crashing on all frame pages.  Darin
        is working on a more permanent fix.

        * loader/FrameLoader.cpp:

2007-07-27  Adam Treat  <treat@kde.org>

        Reviewed by David Hyatt.

        Fix crash when using QtWebKit canvas support.

        * ChangeLog:
        * html/HTMLCanvasElement.cpp:
        (WebCore::HTMLCanvasElement::reset):

2007-07-27  Darin Adler  <darin@apple.com>

        * rendering/RenderLayer.cpp: Rolled out accidentally-checked-in code.

2007-07-27  Darin Adler  <darin@apple.com>

        Reviewed by John Sullivan.

        - fix <rdar://problem/5261393> In Mail the plain text alternatives to messages with attachments show weird little OBJ thingies

        The "weird little thingies" are U+FFFC characters. It's good to render them as zero-width, the way we do
        with control characters -- helps Mail and doesn't hurt web browsing.

        Test: fast/text/zero-width-characters.html
