@@ -282,7 +282,7 @@ __ZN7WebCore15BackForwardList9goForwardEv
 __ZN7WebCore15BackForwardListC1EPNS_4PageE
 __ZN7WebCore15BackForwardListD1Ev
 __ZN7WebCore15ContextMenuItem26releasePlatformDescriptionEv
-__ZN7WebCore15FocusController12advanceFocusEPNS_13KeyboardEventE
+__ZN7WebCore15FocusController15setInitialFocusEPNS_13KeyboardEventE
 __ZN7WebCore15FocusController15setFocusedFrameEN3WTF10PassRefPtrINS_5FrameEEE
 __ZN7WebCore15FocusController18focusedOrMainFrameEv
 __ZN7WebCore15StringTruncator13rightTruncateERKNS_6StringEfRKNS_4FontEb
